--- a/app/globals.css
+++ b/app/globals.css
@@ -9,6 +9,357 @@ body {
   box-sizing: border-box;
 }
 
-@layer utilities {
-  
+::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+  background-color: #f4f4f4;
 }
+
+::-webkit-scrollbar-thumb {
+  background-color: #DBE1E5;
+  border-radius: 20px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+* {
+  scrollbar-width: thin;
+  scrollbar-color: #DBE1E5 #f4f4f4;
+}
+
+.main-container {
+  padding: 1.25rem;
+}
+
+.header-container {
+  height: 60px;
+  background-color: white;
+  border-radius: 0.75rem;
+  padding: 0.75rem 1rem;
+  margin-bottom: 1.25rem;
+}
+
+.header_menu-items {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.logo-image {
+  width: 9.75rem;
+  height: 2.25rem;
+}
+
+.left-container {
+  display: flex;
+  align-items: center;
+  gap: 1.25rem;
+}
+
+.sidebar-container {
+  display: flex;
+  gap: 1.25rem;
+  min-height: 100vh;
+}
+
+.sidebar-container_sidebar {
+  width: 16%;
+  background: #2C4E6C;
+  border-radius: 0.75rem;
+  outline: none;
+  padding: 1.25rem 1rem;
+  color: #FFFFFF;
+  font-weight: 500;
+  font-size: 0.88rem;
+  transition: width 0.3s ease;
+}
+
+.sidebar_collapsed {
+  width: 7%;
+}
+
+.menu-item-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+}
+
+.menu-items {
+  display: flex;
+  flex-direction: column;
+  gap: 0.625rem;
+}
+
+.menu_option {
+  display: flex;
+  align-items: center;
+  gap: 14px;
+  line-height: 1rem;
+  padding: 0.75rem 1.25rem;
+  cursor: pointer;
+}
+
+.menu_option_selected {
+  background: #FFFFFF33;
+  border-radius: 5px;
+}
+
+.logout_button {
+  background: #3FC3AC;
+  padding: 11px 16px;
+  border-radius: 10px;
+  width: 100%;
+  justify-content: center;
+}
+
+.floating-button {
+  position: absolute;
+  top: 0;
+  left: 14.5%;
+}
+
+.floating-button_collapsed {
+  left: 5.5%;
+}
+
+.sidebar-container_content {
+  width: 82%;
+  height: 100%;
+  transition: width 0.3s ease;
+}
+
+.sidebar-container_content_collapsed {
+  width: 91%;
+}
+
+.content-container {
+  height: 100%;
+  padding-top: 1.25rem;
+}
+
+.tab-container {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  width: fit-content;
+  padding: 0 1rem;
+}
+
+.tab-content {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+}
+
+.tab-content_text {
+  font-size: 14px;
+  line-height: 1rem;
+  color: #2D2E34;
+}
+
+.tab-content_badge {
+  padding: 2px 10px;
+  background: #F28372;
+  border-radius: 20px;
+}
+
+.tab-content_badge-text {
+  font-size: 12px;
+  line-height: 14.5px;
+  color: #fff;
+}
+
+.tab-container_hr {
+  height: 4px;
+  background: #3FC3AC;
+  border-radius: 8px;
+}
+
+.table-container {
+  min-height: 42.875rem;
+  background: #FFFFFF;
+  border-radius: 12px;
+  padding: 1.25rem;
+}
+
+.table-search-box-container {
+  display: flex;
+  justify-content: end;
+}
+
+.table-search-box-items {
+  display: flex;
+  gap: 6px;
+}
+
+.table-search-box-container_input {
+  font-size: 12px;
+  line-height: 14.5px;
+  padding: 0.5rem 2rem;
+  border: 1px solid #EDEFF2;
+  border-radius: 5px;
+  min-width: 26.25rem;
+  outline: none;
+  height: 100%;
+  font-weight: 300;
+}
+
+.table-search-box-container_search {
+  width: fit-content;
+  position: absolute;
+  top: 10px;
+  left: 14px;
+}
+
+.table-search-box-items_setting {
+  padding: 8px 12px;
+  border: 1px solid #3FC3AC;
+  border-radius: 5px;
+}
+
+.table-container_table {
+  margin-top: 14px;
+  max-height: 550px;
+  overflow: scroll;
+}
+
+.table-container_table table {
+  border-radius: 5px 5px 0 0;
+  overflow: hidden;
+  border-collapse: separate;
+  border-spacing: 0 1.5rem;
+}
+
+.table_heading {
+  height: 54px;
+  background: #ECF3F9;
+  border-bottom: 1px solid #E2E6EF;
+}
+
+.table-container_table table thead {
+  font-size: 12px;
+  font-weight: 700;
+  line-height: 18px;
+  letter-spacing: 0.02em;
+  text-align: left;
+  color: #5F7181;
+}
+
+.table-container_table table thead th {
+  min-width: 3rem;
+}
+
+.table-container_table table thead th span {
+  width: max-content;
+}
+
+.table-container_table_first-child {
+  padding: 0 0.75rem;
+  padding-top: 5px;
+}
+
+.table_heading_item {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+
+.table-container_table tbody tr {
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 16.94px;
+  text-align: left;
+  color: #2D2E34;
+  height: 54px;
+}
+
+.pagination-container {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  height: 2.625rem;
+  margin-top: 14px;
+  background-color: #F6F7F8;
+  padding: 6px 14px;
+  border-radius: 5px 0 0 0;
+  align-items: center;
+}
+
+.pagination-container_page-text {
+  font-size: 12px;
+  font-weight: 500;
+  line-height: 20px;
+  text-align: left;
+  color: #A5A8AF;
+}
+
+.pagination_pages {
+  display: flex;
+  align-items: center;
+  gap: 1.5rem;
+}
+
+.pagination_pages_action-container {
+  display: flex;
+  gap: 4px;
+  align-items: center;
+  cursor: pointer;
+}
+
+.pages_buttons_container {
+  display: flex;
+  gap: 2px;
+}
+
+.page-number_button {
+  border-radius: 8px;
+  padding: 4px 12px;
+}
+
+.pagination_pages_action-container .action-text,
+.pages_buttons_container .active {
+  color: #2D2E34;
+}
+
+.pages_buttons_container .active {
+  background: #FFFFFF;
+}
+
+.pagination-goto {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.pagination-goto input {
+  width: 30px;
+  padding: 0 8px;
+  color: #2D2E34;
+  outline: none;
+}
+
+@media (max-width: 1340px){
+  .sidebar-container_sidebar{
+    width: 22%;
+  }
+  .sidebar_collapsed{
+    width: 10%;
+  }
+  .sidebar-container_content{
+    width: 76%;
+  }
+  .sidebar-container_content_collapsed {
+    width: 88%;
+  }
+  .floating-button{
+    left: 20.5%;
+  }
+  .floating-button_collapsed {
+    left: 8.5%;
+  }
+}
+
+@layer utilities {}
